yamls/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rickmorty-api
  labels:
    app: rickmorty-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rickmorty-api
  template:
    metadata:
      labels:
        app: rickmorty-api
    spec:
      containers:
      - name: rickmorty-api
        image: rickmorty-api:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthcheck
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
