yamls/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rickmorty-api
spec:
  selector:
    app: rickmorty-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
