yamls/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rickmorty-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rickmorty-api
            port:
              number: 80
